Port to 1.20.4 multiloader for neo and fabric.

--- a/build.gradle
+++ b/build.gradle
@@ -71,11 +71,17 @@ subprojects {
 			"minecraft_version_range": minecraft_version_range,
 			"fabric_version": fabric_version,
 			"fabric_loader_version": fabric_loader_version,
+			"pack_format_version": pack_format_version,
 			"mod_name": mod_name,
 			"mod_author": mod_author,
 			"mod_id": mod_id,
 			"license": license,
 			"description": project.description,
+			"source": project.source,
+			"discord": discord,
+			"display_url": display_url,
+			"curseforge_url": curseforge_url,
+			"modrinth_url": modrinth_url,
 			"neoforge_version": neoforge_version,
 			"neoforge_loader_version_range": neoforge_loader_version_range,
 			"credits": credits
