--- a/gradle.properties
+++ b/gradle.properties
@@ -3,27 +3,34 @@
 # Every field you add must be added to the root build.gradle expandProps map.
 
 # Project
-version=1.0.0
+version=2.0.0
 group=dev.tophatcat.kirisutils
-
-# Common
-minecraft_version=1.20.2
+source=https://github.com/kiris-mods/kiris-utils
+discord=https://discord.tophatcat.dev
+display_url=https://tophatcat.dev
+curseforge_url=https://curseforge.com/minecraft/mc-mods/kiris-utils
+modrinth_url=https://modrinth.com/minecraft/mod/kirisutils
 mod_name=Kiri's Utils
 mod_author=KiriCattus
 mod_id=kirisutils
 license=LGPL-v2.1
 credits=KiriCattus
 description=Kiri's Utilities, a mod for saving time and energy writing duplicate code all over the place.
-minecraft_version_range=[1.20.2,)
+
+# Common
+minecraft_version=1.20.4
+minecraft_version_range=[1.20.4,)
+pack_format_version=18
 
 # Fabric
-fabric_version=0.91.2+1.20.2
+fabric_version=0.91.3+1.20.4
 fabric_loader_version=0.15.3
 
 # NeoForge
-neoforge_version=20.2.86
+neoforge_version=20.4.62-beta
 neoforge_loader_version_range=[1,)
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+org.gradle.debug=false
