--- a/neoforge/src/main/resources/META-INF/mods.toml
+++ b/neoforge/src/main/resources/META-INF/mods.toml
@@ -1,25 +1,25 @@
-modLoader = "javafml" #mandatory
-loaderVersion = "${neoforge_loader_version_range}" #mandatory
-license = "${license}" # Review your options at https://choosealicense.com/.
-issueTrackerURL="https://github.com/kiris-mods/kiris-utils/issues" #optional
+modLoader="javafml" #mandatory
+loaderVersion="${neoforge_loader_version_range}" #mandatory
+license="${license}" # Review your options at https://choosealicense.com/.
+issueTrackerURL="${source}/issues" #optional
 [[mods]] #mandatory
-modId = "kirisutils" #mandatory
+modId = "${mod_id}" #mandatory
 version = "${version}" #mandatory
 displayName = "${mod_name}" #mandatory
-displayURL="https://tophatcat.dev" #optional (displayed in the mod UI)
+displayURL="${display_url}" #optional (displayed in the mod UI)
 logoFile="logo.png" #optional
 credits="${credits}" #optional
 authors = "${mod_author}" #optional
 description = '''${description}''' #mandatory (Supports multiline text)
 [[dependencies.${mod_id}]] #optional
 modId = "neoforge" #mandatory
-mandatory = true #mandatory
+type = "required" #mandatory
 versionRange = "${neoforge_loader_version_range}" #mandatory
 ordering = "NONE" # The order that this dependency should load in relation to your mod, required to be either 'BEFORE' or 'AFTER' if the dependency is not mandatory
 side = "BOTH" # Side this dependency is applied on - 'BOTH', 'CLIENT' or 'SERVER'
 [[dependencies.${mod_id}]]
 modId = "minecraft"
-mandatory = true
+type = "required" #mandatory
 versionRange = "${minecraft_version_range}"
 ordering = "NONE"
 side = "BOTH"
