--- a/gradle.properties
+++ b/gradle.properties
@@ -1,36 +1,63 @@
-# Important Notes:
-# fabric.mod.json's modid field cannot be expanded, you must change it manually.
-# Every field you add must be added to the root build.gradle expandProps map.
-
 # Project
-version=2.0.0
-group=dev.tophatcat.kirisutils
-source=https://github.com/kiris-mods/kiris-utils
-discord=https://discord.tophatcat.dev
-display_url=https://tophatcat.dev
-curseforge_url=https://curseforge.com/minecraft/mc-mods/kiris-utils
-modrinth_url=https://modrinth.com/minecraft/mod/kirisutils
-mod_name=Kiri's Utils
-mod_author=KiriCattus
-mod_id=kirisutils
-license=LGPL-v2.1
-credits=KiriCattus
-description=Kiri's Utilities, a mod for saving time and energy writing duplicate code all over the place.
+group = dev.tophatcat.cattuslib
+mod_name = Cattus Lib
+mod_id = cattuslib
+author = KiriCattus
+credits = KiriCattus
+license = LGPL-v2.1
+license_description = Cattus Lib, a mod for saving time and energy writing duplicate code all over the place.
+description = Cattus Lib, a mod for saving time and energy writing duplicate code all over the place.
+
+# Links
+display_url = https://tophatcat.dev
+discord = https://discord.tophatcat.dev
+mod_source = https://github.com/kiris-mods/cattus-lib
+license_url = https://github.com/kiris-mods/cattus-lib/blob/dev/LICENSE.md
+modrinth_url = https://modrinth.com/mod/cattus-lib
+curseforge_url = https://www.curseforge.com/minecraft/mc-mods/cattus-lib
 
 # Common
-minecraft_version=1.20.4
-minecraft_version_range=[1.20.4,)
-pack_format_version=18
-
-# Fabric
-fabric_version=0.91.3+1.20.4
-fabric_loader_version=0.15.3
+java_version = 21
+minecraft_version = 1.21.1
+minecraft_version_range = [1.21,)
+parchment_minecraft = 1.21.1
+parchment_version = 2024.11.17
+modrinth_id = M6agkTxA
+curseforge_id = 280547
 
 # NeoForge
-neoforge_version=20.4.62-beta
-neoforge_loader_version_range=[1,)
+# See https://projects.neoforged.net/neoforged/moddevgradle for new versions
+# See https://parchmentmc.org/docs/getting-started#choose-a-version for new versions
+neoforge_version = 21.1.92
+neoforge_version_range = [21.1,)
+fancy_mod_loader_version = 4.0.38
+fancy_mod_loader_version_range = [4,)
+neo_form_version = 1.21.1-20240808.144430
+
+# Fabric
+# See https://fabricmc.net/develop/ for new versions
+fabric_loom = 1.9-SNAPSHOT
+fabric_version = 0.114.0
+fabric_version_range = >=0.114.0
+fabric_loader_version = 0.16.9
+fabric_loader_version_range = >=0.16
+
+# Dependencies
+# - Common
+resourceful_config_common_version = 3.0.8
+
+# - NeoForge
+resourceful_config_neoforge_version = 3.0.8
+# -- Optional
+jade_neoforge_version = 15.9.2
+
+# - Fabric
+resourceful_config_fabric_version = 3.0.8
+# -- Optional
+jade_fabric_version = 15.9.2
+modmenu_version = 11.0.3
 
 # Gradle
-org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
-org.gradle.debug=false
+org.gradle.jvmargs = -Xmx3G
+org.gradle.daemon = false
+org.gradle.debug = false
