--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,36 +1,45 @@
 plugins {
-	id 'idea'
-	id 'java'
-	id 'maven-publish'
-	id 'org.spongepowered.gradle.vanilla' version '0.2.1-SNAPSHOT'
+    id "multiloader-common"
+    id "net.neoforged.moddev"
 }
 
-base {
-	archivesName = "${mod_id}-common-${minecraft_version}"
-}
-
-minecraft {
-	version(minecraft_version)
-	if(file("src/main/resources/${mod_id}.accesswidener").exists()){
-		accessWideners(file("src/main/resources/${mod_id}.accesswidener"))
-	}
+neoForge {
+    neoFormVersion = neo_form_version
+    // If they exist, access transformers are automatically detected now.
+    parchment {
+        minecraftVersion = parchment_minecraft
+        mappingsVersion = parchment_version
+    }
 }
 
 dependencies {
-	compileOnly group:'org.spongepowered', name:'mixin', version:'0.8.5'
-	implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.1'
+    compileOnly group: "org.spongepowered", name: "mixin", version: "0.8.5"
+    // fabric and neoforge both bundle mixinextras, so it is safe to use it in common
+    compileOnly group: "io.github.llamalad7", name: "mixinextras-common", version: "0.3.5"
+    annotationProcessor group: "io.github.llamalad7", name: "mixinextras-common", version: "0.3.5"
+
+    // Dependencies we use for this mod to run as we expect it to.
+    implementation "com.teamresourceful.resourcefulconfig:resourcefulconfig-common-1.21:${resourceful_config_common_version}"
 }
 
-publishing {
-	publications {
-		mavenJava(MavenPublication) {
-			artifactId base.archivesName.get()
-			from components.java
-		}
-	}
-	repositories {
-		maven {
-			url "file://" + System.getenv("local_maven")
-		}
-	}
+sourceSets.main.resources {
+    srcDir "src/generated/resources"
+}
+
+configurations {
+    commonJava {
+        canBeResolved = false
+        canBeConsumed = true
+    }
+    commonResources {
+        canBeResolved = false
+        canBeConsumed = true
+    }
+}
+
+artifacts {
+    commonJava sourceSets.main.java.sourceDirectories.singleFile
+    for (def dir : sourceSets.main.resources.sourceDirectories.files) {
+        commonResources dir
+    }
 }
