--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -1,91 +1,53 @@
 plugins {
-	id 'idea'
-	id 'maven-publish'
-	id 'net.neoforged.gradle.userdev' version '7.0.41'
-	id 'java-library'
+    id "multiloader-loader"
+    id "net.neoforged.moddev"
 }
 
-base {
-	archivesName = "${mod_id}-neoforge-${minecraft_version}"
+neoForge {
+    version = neoforge_version
+    // If they exist, access transformers are automatically detected now.
+    parchment {
+        minecraftVersion = parchment_minecraft
+        mappingsVersion = parchment_version
+    }
+
+    runs {
+        configureEach {
+            systemProperty("neoforge.enabledGameTestNamespaces", mod_id)
+            ideName = "NeoForge ${it.name.capitalize()} (${project.path})" // Unify the run config names with fabric
+        }
+        client {
+            client()
+
+            if (project.hasProperty("mc_uuid")) {
+                programArguments.addAll "--uuid", mc_uuid
+            }
+
+            if (project.hasProperty("mc_username")) {
+                programArguments.addAll "--username", mc_username
+            }
+        }
+        data {
+            data()
+            programArguments.addAll("--mod", mod_id, "--all", "--output", file("../common/src/generated/resources").absolutePath, "--existing", file("../common/src/main/resources").absolutePath)
+        }
+        server {
+            server()
+        }
+    }
+    mods {
+        "${mod_id}" {
+            sourceSet sourceSets.main
+        }
+    }
 }
-
-// Automatically enable neoforge AccessTransformers if the file exists
-// This location is hardcoded in FML and can not be changed.
-// https://github.com/neoforged/FancyModLoader/blob/a952595eaaddd571fbc53f43847680b00894e0c1/loader/src/main/java/net/neoforged/fml/loading/moddiscovery/ModFile.java#L118
-if (file('src/main/resources/META-INF/accesstransformer.cfg').exists()) {
-	minecraft.accessTransformers.file file('src/main/resources/META-INF/accesstransformer.cfg')
-}
-
-runs {
-	configureEach {
-		modSource project.sourceSets.main
-	}
-
-	client {
-		systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
-		systemProperty 'forge.logging.console.level', 'debug'
-
-		if (project.hasProperty('mc_uuid')) {
-			// Your UUID, trimmed / without the dashes
-			programArgument("--uuid=${project.mc_uuid}")
-		}
-
-		if (project.hasProperty('mc_username')) {
-			// Your Minecraft in-game username, not email
-			programArgument("--username=${project.mc_username}")
-		}
-	}
-
-	server {
-		systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
-		programArgument '--nogui'
-	}
-
-	gameTestServer {
-		systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
-	}
-
-	data {
-		programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
-	}
-}
-
-sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 dependencies {
-	implementation "net.neoforged:neoforge:${neoforge_version}"
-	compileOnly project(":common")
+    // Dependencies we require for this mod to run as we expect it to.
+    implementation "com.teamresourceful.resourcefulconfig:resourcefulconfig-neoforge-1.21:${resourceful_config_neoforge_version}"
+
+    // Optional
+    implementation "maven.modrinth:jade:${jade_neoforge_version}+neoforge"
 }
 
-// NeoGradle compiles the game, but we don't want to add our common code to the game's code
-Spec<Task> notNeoTask = { Task it -> !it.name.startsWith("neo") } as Spec<Task>
-
-tasks.withType(JavaCompile).matching(notNeoTask).configureEach {
-	source(project(":common").sourceSets.main.allSource)
-}
-
-tasks.withType(Javadoc).matching(notNeoTask).configureEach {
-	source(project(":common").sourceSets.main.allJava)
-}
-
-tasks.named("sourcesJar", Jar) {
-	from(project(":common").sourceSets.main.allSource)
-}
-
-tasks.withType(ProcessResources).matching(notNeoTask).configureEach {
-	from project(":common").sourceSets.main.resources
-}
-
-publishing {
-	publications {
-		mavenJava(MavenPublication) {
-			artifactId base.archivesName.get()
-			from components.java
-		}
-	}
-	repositories {
-		maven {
-			url "file://" + System.getenv("local_maven")
-		}
-	}
-}
+sourceSets.main.resources { srcDir "src/generated/resources" }
