--- a/settings.gradle
+++ b/settings.gradle
@@ -1,31 +1,32 @@
 pluginManagement {
 	repositories {
 		gradlePluginPortal()
+		mavenCentral()
 		maven {
-			name = 'Fabric'
-			url = 'https://maven.fabricmc.net/'
+			name = "NeoForge"
+			url = "https://maven.neoforged.net"
 		}
-		maven {
-			name = 'NeoForge'
-			url = 'https://maven.neoforged.net/releases/'
-		}
-		maven {
-			name = 'Forge'
-			url = 'https://maven.minecraftforge.net/'
-		}
-		maven {
-			name = 'Sponge Snapshots'
-			url = 'https://repo.spongepowered.org/repository/maven-public/'
+		exclusiveContent {
+			forRepository {
+				maven {
+					name = "Fabric"
+					url = "https://maven.fabricmc.net"
+				}
+			}
+			filter {
+				includeGroup("net.fabricmc")
+				includeGroup("fabric-loom")
+			}
 		}
 	}
 }
 
 plugins {
-	id 'org.gradle.toolchains.foojay-resolver-convention' version '0.5.0'
+	id 'org.gradle.toolchains.foojay-resolver-convention' version '0.9.0'
 }
 
 // This should match the folder name of the project, or else IDEA may complain (see https://youtrack.jetbrains.com/issue/IDEA-317606)
-rootProject.name = 'kiris-utils'
+rootProject.name = 'cattus-lib'
 include("common")
 include("fabric")
 include("neoforge")
